# subvectors

./: .gitattributes  .gitignore  BACKLOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: NOVELTY-AND-RISKS.md
scripts/: coverage.py
src/oidc_conformance/: __init__.py  matcher.py
src/subvectors/: cel.py  ffl.py  github.py  gitlab.py  matcher.py
tests/: test_cel.py  test_ffl.py  test_github_grammar.py  test_gitlab_grammar.py  test_matcher.py  test_readme_coverage.py  test_vectors.py
vectors/: github-aws.json  github-azure-flexible.json  github-azure.json  github-gcp.json  gitlab-aws.json  gitlab-azure-flexible.json  gitlab-azure.json  gitlab-gcp.json
vectors/schema/: vector-suite.schema.json
