[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subvectors"
version = "0.1.0"
description = "Reference matcher for OIDC CI/CD trust-condition conformance vectors"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

# The reference matcher has ZERO runtime dependencies on purpose: it is a
# correctness oracle a consumer can vendor or read, not a package they must
# trust at runtime. jsonschema/pytest are needed only to exercise the corpus.
[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4.18"]

[tool.hatch.build.targets.wheel]
packages = ["src/subvectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
